// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assistant messages > should add prefix true to trailing assistant messages 1`] = `
[
  {
    "text": "Hello",
    "type": "Human",
  },
  {
    "text": "Hello!",
    "type": "AI",
  },
]
`;

exports[`assistant messages > should convert basic assistant messages 1`] = `
[
  {
    "text": "Hello!",
    "type": "AI",
  },
]
`;

exports[`system messages > should convert system messages to instruction type 1`] = `
[
  {
    "text": "Be helpful and concise.",
    "type": "Instruction",
  },
]
`;

exports[`tool calls > should handle mixed text and tool calls in one message 1`] = `
[
  {
    "text": "Let me check that.",
    "tool_calls": [
      {
        "function": {
          "arguments": "{"key":"arg-value"}",
          "name": "tool-1",
        },
        "id": "tool-call-id-1",
        "type": "function",
      },
    ],
    "type": "AI",
  },
]
`;

exports[`tool calls > should handle multiple tool calls in sequence 1`] = `
[
  {
    "text": "",
    "tool_calls": [
      {
        "function": {
          "arguments": "{"key":"first-value"}",
          "name": "tool-1",
        },
        "id": "call-1",
        "type": "function",
      },
    ],
    "type": "AI",
  },
  {
    "text": "{"key":"first-result"}",
    "tool_call_id": "call-1",
    "type": "Tool",
  },
  {
    "text": "",
    "tool_calls": [
      {
        "function": {
          "arguments": "{"key":"second-value"}",
          "name": "tool-2",
        },
        "id": "call-2",
        "type": "function",
      },
    ],
    "type": "AI",
  },
  {
    "text": "{"key":"second-result"}",
    "tool_call_id": "call-2",
    "type": "Tool",
  },
]
`;

exports[`tool calls > should stringify arguments in tool calls 1`] = `
[
  {
    "text": "",
    "tool_calls": [
      {
        "function": {
          "arguments": "{"key":"arg-value","nested":{"value":123}}",
          "name": "tool-1",
        },
        "id": "tool-call-id-1",
        "type": "function",
      },
    ],
    "type": "AI",
  },
]
`;

exports[`tool calls > should stringify results in tool responses 1`] = `
[
  {
    "text": "{"key":"result-value","nested":{"value":123}}",
    "tool_call_id": "tool-call-id-1",
    "type": "Tool",
  },
]
`;

exports[`user messages > should combine multiple text parts in user messages 1`] = `
[
  {
    "text": "Hello world!",
    "type": "Human",
  },
]
`;

exports[`user messages > should convert basic user messages 1`] = `
[
  {
    "text": "Hello",
    "type": "Human",
  },
]
`;
